<resources>
    <string name="app_name">NexusSave</string>
    <string name="app_frase">Organiza tus gastos, ingresos, y pagos de la mejor manera.</string>
    <string name="tv_correo">Correo:</string>
    <string name="et_correo">example@email.com</string>
    <string name="tv_pass">Contraseña:</string>
    <string name="et_pass">••••••••</string>
    <string name="bt_registrarse">REGISTRARSE</string>
    <string name="bt_ingresar">INGRESAR</string>
    <string name="tv_registrarse">Registrarse</string>
    <string name="tv_nombre">Nombre:</string>
    <string name="tv_confpass">Cofirme contraseña:</string>
    <string name="tv_ciudad">Ciudad:</string>
    <string name="tv_pais">Pais:</string>
    <string name="tv_fechadenaci">Fecha de nacimiento:</string>
    <string name="et_nombre">Nombre y Apellido</string>
    <string name="et_ciudad">Santa Ana</string>
    <string name="bt_cancelar">CANCELAR</string>
    <string name="bt_crear">CREAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iv_user">user</string>
    <string name="saldo">Saldo Disponible</string>
    <string name="dollar_sign">$</string>
    <string name="dinero_default">00.00</string>
    <string name="lista_de_ingresos">Lista de ingresos</string>
    <string name="concepto">Concepto</string>
    <string name="concepto_ingreso">Concepto del ingreso</string>
    <string name="cantidad_monto">Cantidad en dls</string>
    <string name="monto">Monto</string>
    <string name="cancelar">CANCELAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="concepto_pago">Escriba el concepto de la factura</string>
    <string name="cantidad_pago">Cantidad pendiente de pago</string>
    <string name="bt_fecha">FECHA</string>
    <string name="etFecha">dd/mm/aaaa</string>
    <string name="fechaGasto">Fecha del gasto realizado</string>
    <string name="conceptoGasto">Escriba aqui...</string>
    <string name="cantidad">Cantidad</string>
    <string name="fecha">Fecha</string>
    <string name="regresar">REGRESAR</string>
    <string name="borrar">BORRAR</string>
    <string name="fechaLimite">Fecha Limite</string>
    <string name="estado">Estado</string>
    <string name="cancelado">Cancelado</string>
    <string name="pendiente">Pendiente</string>
    <string name="CompanyContact">/RoyalLockCompany</string>
    <string name="copyright">Copyright © 2020 by RoyalLockCompany.</string>
    <string name="descTwitterLogo">TwitterLogo</string>
    <string name="descFbLogo">FacebookLogo</string>
    <string name="descInstagramLogo">InstagramLogo</string>
    <string name="descPerfil">user logo</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="pagina_principal">Pagina Principal</string>
    <string name="ingresos">Ingresos</string>
    <string name="frase_menu">Organice su dinero y pagos de la mejor manera</string>
    <string name="gastos">Gastos</string>
    <string name="pagos">Pagos</string>
    <string name="contactanos">Contactanos</string>
    <string name="fechaLimitePago">Fecha limite de pago</string>
    <string name="ivApp">logoApp</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="ultimos_gastos">Ultimos Gastos:</string>

</resources>
